--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -32,7 +32,18 @@
     padding-bottom: 10px;
     opacity: 0.7;
 }
-.ve_option_box{
-    width:calc(50% - 132px);
+.ve_option_box {
+    width: calc(50% - 132px);
 }
-
+.size-watch {
+    width: 100%;
+    height: 100%;
+    // display: none;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    visibility: hidden;
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
