--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -47,3 +47,9 @@
     padding: 0;
     border: 0;
 }
+
+.ve_flex_col {
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - #{$nav-height} - 80px);
+}
