--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,3 +1,13 @@
+html {
+    background: #fff;
+    transition: color 300ms, background-color 300ms;
+    &.dark {
+        filter: contrast(100%) invert(100%);
+        img {
+            filter: hue-rotate(180deg);
+        }
+    }
+}
 .ve_header_row_class_name,
 .el-table__fixed-right-patch {
     background: $main-bg-color !important;
